--- a/index.html
+++ b/index.html
@@ -14,19 +14,21 @@
 <body>
     <main>
         <h1>Tic Tac Toe</h1>
+        <button id="new-game">New Game</button>
         <div class="container">
             <div class="game">
-                <button class="box">O</button>
-                <button class="box">O</button>
-                <button class="box">O</button>
-                <button class="box">O</button>
-                <button class="box">O</button>
-                <button class="box">O</button>
-                <button class="box">O</button>
-                <button class="box">O</button>
-                <button class="box">O</button>
+                <button class="box"></button>
+                <button class="box"></button>
+                <button class="box"></button>
+                <button class="box"></button>
+                <button class="box"></button>
+                <button class="box"></button>
+                <button class="box"></button>
+                <button class="box"></button>
+                <button class="box"></button>
             </div>
         </div>
+        <button id="reset-btn">Reset Game</button>
     </main>
     <script src="scripts.js"></script>
 </body>
