--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 <body>
     <main>
         <h1>Tic Tac Toe</h1>
+        <div class="msg-container">
+            <p id="msg">Let's see who gonna win!!</p>
+        </div>
         <button id="new-game">New Game</button>
         <div class="container">
             <div class="game">
